--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -1,159 +1,264 @@
-@keyframes fadeout {
-    from {opacity: 1;}
-    to {opacity: 0;}
-}
-@keyframes filter-animation {
+  @keyframes glitch1 {
     0% {
-      filter: sepia(0) saturate(2);
+      transform: none;
+      opacity: 1;
     }
-    
+    7% {
+      transform: skew(-0.5deg, -0.9deg);
+      opacity: 0.75;
+    }
+    10% {
+      transform: none;
+      opacity: 1;
+    }
+    27% {
+      transform: none;
+      opacity: 1;
+    }
+    30% {
+      transform: skew(0.8deg, -0.1deg);
+      opacity: 0.75;
+    }
+    35% {
+      transform: none;
+      opacity: 1;
+    }
+    52% {
+      transform: none;
+      opacity: 1;
+    }
+    55% {
+      transform: skew(-1deg, 0.2deg);
+      opacity: 0.75;
+    }
     50% {
-      filter: sepia(1) saturate(8);
+      transform: none;
+      opacity: 1;
     }
-    
+    72% {
+      transform: none;
+      opacity: 1;
+    }
+    75% {
+      transform: skew(0.4deg, 1deg);
+      opacity: 0.75;
+    }
+    80% {
+      transform: none;
+      opacity: 1;
+    }
     100% {
-      filter: sepia(0) saturate(2);
+      transform: none;
+      opacity: 1;
     }
   }
-  @keyframes animate
-  {
-      0%
-      {
-          background-position: 0 0;
-          filter: hue-rotate(0deg);
-      }
-      10%
-      {
-          background-position: 5px 0;
-      }
-      20%
-      {
-          background-position: -5px 0;
-      }
-      30%
-      {
-          background-position: 15px 0;
-      }
-      40%
-      {
-          background-position: -5px 0;
-      }
-      50%
-      {
-          background-position: -25px 0;
-      }
-      60%
-      {
-          background-position: -50px 0;
-      }
-      70%
-      {
-          background-position: 0 -20px;
-      }
-      80%
-      {
-          background-position: -60px -20px;
-      }
-      81%
-      {
-          background-position: 0 0;
-      }
-      100%
-      {
-          background-position: 0 0;
-          filter: hue-rotate(360deg);
-      }
+  
+  @keyframes glitch2 {
+    0% {
+      transform: none;
+      opacity: 0.25;
+    }
+    7% {
+      transform: translate(-2px, -3px);
+      opacity: 0.5;
+    }
+    10% {
+      transform: none;
+      opacity: 0.25;
+    }
+    27% {
+      transform: none;
+      opacity: 0.25;
+    }
+    30% {
+      transform: translate(-5px, -2px);
+      opacity: 0.5;
+    }
+    35% {
+      transform: none;
+      opacity: 0.25;
+    }
+    52% {
+      transform: none;
+      opacity: 0.25;
+    }
+    55% {
+      transform: translate(-5px, -1px);
+      opacity: 0.5;
+    }
+    50% {
+      transform: none;
+      opacity: 0.25;
+    }
+    72% {
+      transform: none;
+      opacity: 0.25;
+    }
+    75% {
+      transform: translate(-2px, -6px);
+      opacity: 0.5;
+    }
+    80% {
+      transform: none;
+      opacity: 0.25;
+    }
+    100% {
+      transform: none;
+      opacity: 0.25;
+    }
+  }
+  
+  @keyframes glitch3 {
+    0% {
+      transform: none;
+      opacity: 0.25;
+    }
+    7% {
+      transform: translate(2px, 3px);
+      opacity: 0.5;
+    }
+    10% {
+      transform: none;
+      opacity: 0.25;
+    }
+    27% {
+      transform: none;
+      opacity: 0.25;
+    }
+    30% {
+      transform: translate(5px, 2px);
+      opacity: 0.5;
+    }
+    35% {
+      transform: none;
+      opacity: 0.25;
+    }
+    52% {
+      transform: none;
+      opacity: 0.25;
+    }
+    55% {
+      transform: translate(5px, 1px);
+      opacity: 0.5;
+    }
+    50% {
+      transform: none;
+      opacity: 0.25;
+    }
+    72% {
+      transform: none;
+      opacity: 0.25;
+    }
+    75% {
+      transform: translate(2px, 6px);
+      opacity: 0.5;
+    }
+    80% {
+      transform: none;
+      opacity: 0.25;
+    }
+    100% {
+      transform: none;
+      opacity: 0.25;
+    }
+  }
+  html {
+    scroll-behavior: smooth;
   } 
-.rocktaveslogo{
-    width: 100vw;
-    animation: filter-animation 5s infinite;
-    height: auto;
-} 
+  ::-webkit-scrollbar{
+    display: none;
+  }
 body{
     font-family:arial,sans-serif;
     margin:0 0 0 0;
+    overflow-x: hidden;
  }
- .oasislogo{
+.oasislogo{
      position: absolute;
      left: 0px;
-     margin-left: 10vw;
+     margin-left: 5vw;
      margin-top:3vh;
      width:200px;
      height:auto;
  }
- .header{
+.header{
     padding-top: 1vw;
     height:5.5vw;
-    padding-right: 0vw;
+    padding-right: 2vw;
     text-align: right;
-    width: 80vw;
+    width: 90vw;
  }
  
- li{
+li{
     display: inline-block;
-    margin: 5px;
-    padding: 5px;
-    font-size: 20px;
-    color:white;
+    margin: 20px 0px 20px 20px;
+    padding-bottom: 8px;
+    font-size: 23px;
+    color: darkgray;
 }
 li:hover{
     border-bottom: solid;
-    transition: all 0.1s ease-in-out;
+    transition: all 0.2s ease-in-out;
     opacity: 1;
+    color:white;
+    text-decoration: none;
 }
 .pg1{
     display: flex;
     width:100vw;
     background: black;
-    background-image:url("a.jpg");
+    background-image:url("./a.jpg");
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: 150vh 100vh;
     background-position: center;
+    background-size: cover;
+    background-position: center;    
     height: 100vh;
     flex-flow: wrap;
     justify-content: center;
 }
-.rocktaves{
+h1{
     width:80vw;
-    text-align: left;
     font-size: 140px;
+    letter-spacing: 10px;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
     opacity: 0.78;
     margin:0 0 0 3vw;
-    padding:0 0 0 0;
-    line-height: 85px;
-    height:fit-content;
+    line-height: 0;
+    position:relative;
+    animation: glitch1 2.5s infinite;
 }
-.rocktaves:before
-{
-	content: 'ROCKTAVES';
-	position: absolute;
-	
-	width: 100%;
-	height: 100%;
-	background: url(bg.jpg);
-	opacity: .5;
-	mix-blend-mode: hard-light;
+h1:first-child{
+  z-index: 111;
 }
-.rocktaves:hover:before
-{
-	animation: animate .2s linear infinite;
-}
-.tagline{
-    text-align: left;
-    font-size: 55px;
-    color: gray;
-}
-
+h1:nth-child(2) {
+    color: #67f3da;
+    animation: glitch2 2.5s infinite;
+  }
+  h1:nth-child(3) {
+    color: #f16f6f;
+    animation: glitch3 2.5s infinite;
+  }
 .fa{
     position:relative; 
-    font-size:35px;
+    font-size:30px;
     margin: 0.5vw;
+    padding-top: 1vh;
     color:grey;
-    float:right;
-    padding-right: 2vw;
+    float: left;
+    padding-left:0.5vw;
+}
+.follow{
+  position:relative; 
+  font-size:35px;
+  margin: 0.5vw;
+  
+  color:grey;
+  float: left;
+  padding-left: 8vw;
 }
 .icons{ 
     position: absolute;
@@ -163,13 +268,15 @@ li:hover{
     padding-bottom: 1vw;  
 }
 .fa:hover{
+    transition: all 0.2s ease-in-out;
+    opacity: 1;
     color:white;
+    text-decoration: none;
 }
 
 .pg2{
     display: flex;
     background: black;
-    
     width: 100vw;
     color: white;
     flex-direction: column;
@@ -185,9 +292,9 @@ li:hover{
     text-decoration: underline;
 }
 .aboutuscont{
-    width: 70vw;
+    width: 80vw;
     padding-top: 4vh; 
-    padding-bottom: 20vh;
+    padding-bottom: 6vh;
     font-size: 24px;
 }
 .pg3{
@@ -206,32 +313,48 @@ li:hover{
     font-size: 70px;;
 }
 .rule1{
-     display: flex;
-     width: 100vw;
      position: relative;
+     display:flex;
+     width: 100vw;
+     height: 100vh;
      color:black;
-     background: white;
 }
 .rule1head1{
-    position: absolute;     
+    position: relative;
     font-size: 30px;
-    left: 12vw;
+    left: 10vw;
+    height:auto;
 }
 .rule1head2{
-    position: absolute;
-    top: -21vh;
-    left: 12vw;
+    position: relative;
     font-size: 450px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    left:4vw;
+    line-height: 310px;    
+    z-index:100;
+    height:fit-content;
 }
 .rule1content{
-    padding-top:2vh;
-    padding-bottom:13vh;
-    width: 50vw;
-    padding-left:400px;
-    padding-right:400px;
+    display: flex;
+    margin-top: 3%;
     font-size: 25px;
-    margin: 0;
+    margin-right: 10vw;
+    text-align: left;
+    margin-left:2vw;
+    position:relative;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+}
+.blank1{
+    position:relative;
+    height:10vh;  
+    background:white;  
+}
+.blank2{
+    position:relative;
+    height:10vh;  
+    background:black;  
 }
 .rule2{
     display: flex;
@@ -242,26 +365,52 @@ li:hover{
 }
 .rule2head1{
     font-size: 30px;
-    position: absolute;
+    line-height: 30px;
+    margin-top:3%;
+    position: relative;
     right: 10vw; 
-    top: 3vh;
 }
 .rule2head2{
-    position: absolute;
-    top: -15vh;
-    right: 10vw;
+    position: relative;
+    right: 4vw;
+    z-index: 5;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    z-index: 100;
     font-size: 450px;
+    line-height: 310px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 .rule2content{
-    padding-top:10vh;
-    width: 50vw;
-    padding-left:400px;
-    padding-bottom:30vh;
-    padding-right:400px;
+    display: flex;
     font-size: 25px;
-    margin: 0;
+    margin-top: 3%;
+    margin-right: 4vw;
+    text-align: right;
+    margin-left:10vw;
+    position:relative;
+    align-items: center;
+    justify-content: center;
+}
+.triangle2{
+    border-style: solid;
+    border-color: transparent transparent white ;
+    border-width: 0px 0px 20vh 25vw;
+    height: 0px;
+    width:0px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.triangle1{
+  border-style: solid;
+  width: 0;
+  height: 0;
+  border-color:  black transparent transparent transparent;
+  border-width: 20vh 0  0 25vw;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 .pg4{
         display: flex;
@@ -284,4 +433,60 @@ li:hover{
     padding-bottom: 4vh;
     font-size: 20px;
 }
+.contact{
+  display: flex;
+}
+.img {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  border: 9px solid #ffffff;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+ }
+ .details{
+   width: 50vw;
+ }
+@media only screen and (max-width: 890px) 
+  {
+    h1
+    {
+        font-size: 15vw;
+        
+    }
+  }
+@media only screen and (max-width: 800px) 
+  {
+    .oasislogo{
+      position: absolute;
+      left: calc(100% - 280px);
+      margin-right: 3vw;
+      margin-top:3vh;
+      width: 200px;
+      height:auto;
+  }
+    li
+    {
+        display: none;
+    }
+    .pg3{
+        width: 300vw;
+    }
+    .rule2{
+        position: relative;
+        top: 0;
+        left:100vw;
+    }
+    h1
+    {
+        font-size: 15vw;
+        
+    }
+
+    .tagline{
+        content: "Tag Line";
+    }
+    
+  }
 
