--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -165,11 +165,8 @@
   html {
     scroll-behavior: smooth;
   } 
-  ::-webkit-scrollbar{
-    display: none;
-  }
 body{
-    font-family:arial,sans-serif;
+   font-family: 'Roboto', sans-serif;
     margin:0 0 0 0;
     overflow-x: hidden;
  }
@@ -188,15 +185,15 @@ body{
     text-align: right;
     width: 90vw;
  }
- 
-li{
+.nav{
     display: inline-block;
+    font-weight: 600;
     margin: 20px 0px 20px 20px;
     padding-bottom: 8px;
     font-size: 23px;
     color: darkgray;
 }
-li:hover{
+.nav:hover{
     border-bottom: solid;
     transition: all 0.2s ease-in-out;
     opacity: 1;
@@ -223,7 +220,7 @@ h1{
     font-size: 140px;
     letter-spacing: 10px;
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     font-weight: 600;
     opacity: 0.78;
     margin:0 0 0 3vw;
@@ -255,10 +252,9 @@ h1:nth-child(2) {
   position:relative; 
   font-size:35px;
   margin: 0.5vw;
-  
   color:grey;
   float: left;
-  padding-left: 8vw;
+  padding-left: 5.5vw;
 }
 .icons{ 
     position: absolute;
@@ -294,13 +290,16 @@ h1:nth-child(2) {
 .aboutuscont{
     width: 80vw;
     padding-top: 4vh; 
+    text-align: center;
     padding-bottom: 6vh;
-    font-size: 24px;
+    font-size: 30px;
 }
 .pg3{
     background:white;
     width: 100vw;
     color: white;
+    display: flex;
+    flex-flow: column;
 }
 .ruleshead{
     display: block;
@@ -310,34 +309,52 @@ h1:nth-child(2) {
     text-decoration: underline;
     padding-top: 2.5vw;
     text-align: center;
-    font-size: 70px;;
+    font-size: 70px;
+}
+.procedure{
+  display: block;
+  width: 80vw;
+  margin-left:10vw;
+  height: 15vh;
+  color:black;
+  padding-top: 2.5vw;
+  text-align: center;
+  font-size: 25px;
+  border-bottom: solid black 2px;
+}
+
+.procedurecont li{
+  display: block;
+  list-style-type: none;
 }
 .rule1{
      position: relative;
      display:flex;
      width: 100vw;
-     height: 100vh;
+     height: auto;
      color:black;
 }
 .rule1head1{
     position: relative;
     font-size: 30px;
     left: 10vw;
+    margin-top: 3%;  
     height:auto;
 }
 .rule1head2{
     position: relative;
     font-size: 450px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
     left:4vw;
+    margin-top: 3%;  
     line-height: 310px;    
     z-index:100;
     height:fit-content;
 }
 .rule1content{
-    display: flex;
+    width: 300vw;
     margin-top: 3%;
-    font-size: 25px;
+    font-size: 20px;
     margin-right: 10vw;
     text-align: left;
     margin-left:2vw;
@@ -360,6 +377,7 @@ h1:nth-child(2) {
     display: flex;
     width: 100vw;
     position: relative;
+    left: 0;
     color:white;
     background-color: black;
 }
@@ -379,10 +397,10 @@ h1:nth-child(2) {
     z-index: 100;
     font-size: 450px;
     line-height: 310px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:  'Helvetica Neue', sans-serif;
 }
 .rule2content{
-    display: flex;
+    
     font-size: 25px;
     margin-top: 3%;
     margin-right: 4vw;
@@ -390,27 +408,6 @@ h1:nth-child(2) {
     margin-left:10vw;
     position:relative;
     align-items: center;
-    justify-content: center;
-}
-.triangle2{
-    border-style: solid;
-    border-color: transparent transparent white ;
-    border-width: 0px 0px 20vh 25vw;
-    height: 0px;
-    width:0px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
-.triangle1{
-  border-style: solid;
-  width: 0;
-  height: 0;
-  border-color:  black transparent transparent transparent;
-  border-width: 20vh 0  0 25vw;
-  position: absolute;
-  right: 0;
-  top: 0;
 }
 .pg4{
         display: flex;
@@ -435,10 +432,18 @@ h1:nth-child(2) {
 }
 .contact{
   display: flex;
+  width: 100vw;
+  align-content: center;
+}
+.image{
+  width: 50vw;
 }
 .img {
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  
+  width: 100px;
+  margin-top: 5vh;
+  margin-bottom:5vh;
   border-radius: 50%;
   border: 9px solid #ffffff;
   background-size: cover;
@@ -446,13 +451,16 @@ h1:nth-child(2) {
   background-repeat: no-repeat;
  }
  .details{
-   width: 50vw;
+   font-size: 30px;
  }
-@media only screen and (max-width: 890px) 
+ .details{
+   margin-top:calc(35px + 5vh); 
+ }
+@media only screen and (max-width: 950px) 
   {
     h1
     {
-        font-size: 15vw;
+        font-size: 12vw;
         
     }
   }
@@ -466,7 +474,7 @@ h1:nth-child(2) {
       width: 200px;
       height:auto;
   }
-    li
+    .nav
     {
         display: none;
     }
@@ -480,7 +488,7 @@ h1:nth-child(2) {
     }
     h1
     {
-        font-size: 15vw;
+        font-size: 12vw;
         
     }
 
