--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -178,23 +178,13 @@ body{
    font-family: 'Roboto', sans-serif;
     margin:0 0 0 0;
     overflow-x: hidden;
-    width:100vw;
+    max-width:100vw;
     
  }
 
 
- *::-webkit-scrollbar {
-  width: 10px;
-  }
-  *::-webkit-scrollbar-track {
-  background : darkgray;
-  border-radius: 10px;
-
-  }
-  *::-webkit-scrollbar-thumb { 
-  background : black;
-  border-radius: 10px;
-  }
+ ::-webkit-scrollbar {
+  display: none;}
 .oasislogo{
      position: absolute;
      left: 0px;
@@ -281,6 +271,7 @@ h1:nth-child(2) {
   font-family: 'Roboto', sans-serif;
   font-size:35px;
   font-weight: 600;
+  left:0;
   margin: 0.5vw;
   color:grey;
   float: left;
@@ -655,7 +646,7 @@ h1:nth-child(2) {
   }
   .round1head2{
     font-size: 200px;
-    margin-top:-3vh;
+    margin-top:-2vh;
   }
   .round2head1{
     margin-top:2vh;
@@ -664,7 +655,7 @@ h1:nth-child(2) {
   }
   .round2head2{
     font-size: 200px;
-    margin-top:-4vh;
+    margin-top:-2vh;
     right:3vw;
   }
   .round1content{
