--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -381,7 +381,7 @@ h1:nth-child(2) {
     margin-top: 3%;
     font-size: 20px;
     margin-right: 10vw;
-    text-align: left;
+    text-align: justify;
     margin-left:2vw;
     position:relative;
     align-items: center;
