--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -169,8 +169,9 @@
 body{
    font-family: 'Roboto', sans-serif;
     margin:0 0 0 0;
+    padding:0;
     overflow-x: hidden;
-    max-width:100vw;
+    width:100vw;
     
  }
 
@@ -342,6 +343,7 @@ h1:nth-child(2) {
   height: 15vh;
   color:black;
   padding-top: 0vh;
+  padding-bottom: 5vh; 
   text-align: center;
   font-size: 25px;
   border-bottom: solid black 2px;
@@ -381,7 +383,7 @@ h1:nth-child(2) {
     margin-top: 3%;
     font-size: 20px;
     margin-right: 10vw;
-    text-align: left;
+    text-align: jus;
     margin-left:2vw;
     position:relative;
     align-items: center;
@@ -430,7 +432,7 @@ h1:nth-child(2) {
     font-size: 25px;
     margin-top: 3%;
     margin-right: 8.5vw;
-    text-align: right;
+    text-align: justify;
     margin-left:10vw;
     position:relative;
     align-items: center;
