--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -383,7 +383,7 @@ h1:nth-child(2) {
     margin-top: 3%;
     font-size: 20px;
     margin-right: 10vw;
-    text-align: jus;
+    text-align: left;
     margin-left:2vw;
     position:relative;
     align-items: center;
@@ -432,7 +432,7 @@ h1:nth-child(2) {
     font-size: 25px;
     margin-top: 3%;
     margin-right: 8.5vw;
-    text-align: justify;
+    text-align: right;
     margin-left:10vw;
     position:relative;
     align-items: center;
