--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -308,17 +308,17 @@ h1:nth-child(2) {
     font-size: 25px;
 }
 .video{
+  display: flex;
   position: relative;
+  align-content: center;
+  justify-content: center;
   width: 100%;
-  padding-bottom: 56.25%; 
+  padding-bottom: 35vh; 
   height: 0;
 }
 .video iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  width: 30vw;
+  height: 30vh;
 }
 .pg3{
     background:white;
