--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -210,7 +210,7 @@ body{
     border-bottom: solid #67f3da;
     transition: all 0.2s ease-in-out;
     opacity: 1;
-    color:white;
+    color:#44ABF7;
     text-decoration: none;
 }
 .pg1{
