--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -1,4 +1,3 @@
-
 @keyframes glitch1 {
     0% {
       transform: none;
@@ -227,22 +226,22 @@ body{
     justify-content: center;
 }
 h1{
-    width:80vw;
-    font-size: 140px;
-    letter-spacing: 15px;
-    color: white;
-    font-family: 'Segoe UI', sans-serif;
-    font-weight: 600;
-    opacity: 0.78;
-    margin:0 0 0 3vw;
-    line-height: 0;
-    position:relative;
-    animation: glitch1 2.5s infinite;
+  width:80vw;
+  font-size: 140px;
+  letter-spacing: 15px;
+  color: white;
+  font-family: 'Segoe UI', sans-serif;
+  font-weight: 600;
+  opacity: 0.78;
+  margin:0 0 0 3vw;
+  line-height: 0;
+  position:relative;
+  animation: glitch1 3s infinite;
 }
 
 h1:nth-child(2) {
     color: #67f3da;
-    animation: glitch2 2.5s infinite;
+    animation: glitch2 2s infinite;
   }
   h1:nth-child(3) {
     color: #f16f6f;
@@ -304,7 +303,7 @@ h1:nth-child(2) {
     line-height:35px;
     padding-top: 4vh; 
     text-align: center;
-    padding-bottom: 6vh;
+    padding-bottom: 2vh;
     font-size: 25px;
 }
 .video{
@@ -313,12 +312,10 @@ h1:nth-child(2) {
   align-content: center;
   justify-content: center;
   width: 100%;
-  padding-bottom: 35vh; 
-  height: 0;
+  padding-bottom: 4vh;
 }
 .video iframe{
-  width: 30vw;
-  height: 30vh;
+  width:40vw;
 }
 .pg3{
     background:white;
@@ -339,19 +336,26 @@ h1:nth-child(2) {
 .procedure{
   display: block;
   width: 80vw;
-  margin-left:0vw;
+  margin-left:10vw;
   height: 15vh;
   color:black;
   padding-top: 0vh;
-  padding-bottom: 5vh; 
+  padding-bottom: 5vh;
   text-align: center;
   font-size: 25px;
   border-bottom: solid black 2px;
 }
 
+.procedurecont{
+  padding:0 0 0 0;
+
+}
+
 .procedurecont li{
   display: block;
   list-style-type: none;
+  padding:0 0 0 0;
+  margin:0 0 0 0;
 }
 .round1{
      position: relative;
@@ -439,9 +443,9 @@ h1:nth-child(2) {
 }
 .pg4{
         display: flex;
-        background: white;
+        background: black;
         width: 100vw;
-        color: black;
+        color: white;
         flex-flow: wrap;
         justify-content: center;
 }
@@ -500,7 +504,7 @@ h1:nth-child(2) {
     .oasislogo{
       position: absolute;
       left: calc(100% - 150px - 8vw);
-      margin-top:3vh;
+      margin-top:vh;
       width: 150px;
       height:auto;
   }
@@ -522,7 +526,7 @@ h1:nth-child(2) {
       margin-bottom:2vh;
     }
     .header{
-    padding-top: 5vw;
+    padding-top: 3vh;
     height:5.5vw;
     padding-right: 2vw;
     text-align: right;
@@ -538,6 +542,8 @@ h1:nth-child(2) {
     width: 40px;
     height: 32px;
     position: absolute;
+    top:5px;
+    left:-5px;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
