--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -261,11 +261,10 @@ h1:nth-child(2) {
   font-family: 'Roboto', sans-serif;
   font-size:35px;
   font-weight: 600;
-  left:0;
   margin: 0.5vw;
   color:grey;
   float: left;
-  padding-left: 5.5vw;
+  margin-left:6vw;
 }
 .icons{ 
     position: absolute;
@@ -317,7 +316,7 @@ h1:nth-child(2) {
   border-radius: 30px;
   width:40vw;
   height:22.5vw;
-  margin: 2vh 0 6vh 0;
+  margin: 2vh 0 10vh 0;
 }
 .pg3{
     background:white;
